Fix breaks in Raspberry Pi Images in Chrome

--- a/components/raspberry-pi/raspberry-pi.module.scss
+++ b/components/raspberry-pi/raspberry-pi.module.scss
@@ -26,6 +26,7 @@
 
 .raspberrypi {
   display: block;
+  font-family: Monaco;
   line-height: 1.2em;
 }
 
